<resources>
    <string name="app_name">UserLoginPage</string>
    <string name="login">LOGIN</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="register">REGISTRATION</string>
    <string name="or">OR</string>
    <string name="re_password">Password</string>
    <string name="email">Email</string>
    <string name="confirm_pw">Confirm Password</string>
    <string name="re_username">Username</string>
    <string name="btn_register">REGISTER</string>
    <string name="submit">SUBMIT</string>
    <string name="enter_here">Enter here...</string>
    <string name="morning">Morning</string>
    <string name="good">Good</string>
    <string name="whatsapp">TODO</string>
    <string name="twitter">TODO</string>
    <string name="instagram">TODO</string>
    <string name="facebook">TODO</string>
    <string name="fgt_pw">Forgot Password?</string>
    <string name="sign_up">Don\'t have an account? Sign up now</string>
    <string name="profilepic">TODO</string>
    <string name="terms_conditions"><![CDATA[Terms & Conditions]]></string>
</resources>