<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/sky240x320"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="76dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="69dp"
        android:layout_marginRight="69dp"
        android:text="@string/register"
        android:textColor="#000000"
        android:textSize="40dp" />

    <EditText
        android:id="@+id/editTextUsername"
        android:layout_width="wrap_content"
        android:layout_height="55dp"
        android:layout_below="@id/imageView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="18dp"
        android:background="#99BDBDBD"
        android:drawableLeft="@drawable/ic_action_name"
        android:ems="10"
        android:hint="@string/re_username"
        android:inputType="textPassword"
        android:padding="10dp" />

    <EditText
        android:id="@+id/editPassword"
        android:layout_width="wrap_content"
        android:layout_height="55dp"
        android:layout_below="@id/editTextUsername"
        android:layout_centerInParent="true"
        android:layout_marginTop="19dp"
        android:background="#99BDBDBD"
        android:drawableLeft="@drawable/ic_action_name"
        android:ems="10"
        android:hint="@string/re_password"
        android:inputType="textPassword"
        android:padding="10dp" />

    <EditText
        android:id="@+id/editConfirmPw"
        android:layout_width="wrap_content"
        android:layout_height="55dp"
        android:layout_below="@id/editPassword"
        android:layout_centerInParent="true"
        android:layout_marginStart="1dp"
        android:layout_marginLeft="1dp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="290dp"
        android:background="#99BDBDBD"
        android:drawableLeft="@drawable/ic_action_lock2"
        android:ems="10"
        android:hint="@string/confirm_pw"
        android:inputType="textPassword"
        android:padding="10dp" />

    <EditText
        android:id="@+id/editEmail"
        android:layout_width="wrap_content"
        android:layout_height="55dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="304dp"
        android:background="#99BDBDBD"
        android:drawableLeft="@drawable/ic_action_email"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:padding="10dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="194dp"
        android:layout_marginLeft="194dp"
        android:layout_marginBottom="149dp"
        android:text="@string/or"
        android:textColor="#000000"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="215dp"
        app:cardBackgroundColor="#FF000"
        app:cardCornerRadius="25dp"
        app:cardElevation="5dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="79dp">

            <TextView
                android:id="@+id/login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentBottom="true"
                android:layout_marginEnd="33dp"
                android:layout_marginRight="33dp"
                android:layout_marginBottom="30dp"
                android:text="@string/btn_register"
                android:textColor="#FF0505"
                android:textSize="20dp" />
        </RelativeLayout>
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="239dp"
        android:layout_height="46dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="39dp"
        android:layout_marginRight="39dp"
        android:layout_marginBottom="81dp"
        android:text="Login with Facebook"
        android:textColor="#070707"
        android:textSize="19dp" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="47dp"
        android:layout_height="89dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="83dp"
        android:layout_marginLeft="83dp"
        android:layout_marginBottom="69dp"
        android:src="@drawable/facebook" />


</RelativeLayout>